# mpc-quadrotor-landing

./: .gitignore  CLAUDE.md  keyboard_control.py  package.xml  pyproject.toml  setup.cfg  setup.py  thrust_test.py
archive/coppeliasim/: plot_delta_position.py  record_position.py  tune.md
hardware/: battery.py  csv_logger.py  dashboard.py  hover_test.py  keyboard_control.py  mpc_control.py  mpc_pilot.py  mpc_teleop.py  mpc_teleop_landing.py  mqtt_viewer.py  plot_flight.py  pyproject.toml  teleop.py  thrust_test.py
latex/: equations.aux  equations.fdb_latexmk  equations.fls  equations.tex
limo/: README.md  client.py  pose.py  pyproject.toml  registry.py  server.py  teleop.py
mpc_landing/: __init__.py  boundary.py  conversions.py  crsf.py  guidance.py  mpc.py  pid.py  pyproject.toml  reference.py  supervisor.py  yaw.py  yaw_controller.py
mpc_landing/mqtt/: __init__.py  parser.py  sub.py  test_parser.py
sim/: Ground_LUA_03_24.txt  keyboard_teleop.py  mpc_controller.py  mpc_controller_ground.py  mpc_controller_ground_tracking.py  mpc_gui.py  my sim.ttt  my_sim.ttt  pyproject.toml  quadrotor_flight_controller.lua  sim.py  sim_supervisor.py  simu_mpc_teleop_landing.py  teleop.py  test_input_03_24.py
sim/new crazyflow files/: CLAUDE.md  pyproject.toml
sim/old/: mpc_controller.py  mpc_controller_ground_tracking.py  pyproject.toml
src/: boundary.py  heartbeat.py  mqtt_sub.py  pyproject.toml  supervisor.py
src/mqtt/: __init__.py  sub.py
