<?xml version="1.0"?>
<package format="3">
  <name>mpc_landing</name>
  <version>0.1.0</version>
  <description>MPC-based tracking and landing of TinyWhoop on moving Limo</description>
  <maintainer email="bhsu25@bu.edu">Benjamin Hsu</maintainer>
  <maintainer email="cgruss@bu.edu">Cornelius Gruss</maintainer>
  <maintainer email="ycz02@bu.edu">Yancheng Zhou</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
