[project]
name = "mpc-quadrotor-landing"
version = "0.1.0"
description = "MPC-based autonomous quadrotor landing system"
requires-python = ">=3.13"
dependencies = [
    "sim",
    "mpc-landing",
    "mpc-hardware",
    "limo",
]

[tool.uv.sources]
sim = { workspace = true }
mpc-landing = { workspace = true }
mpc-hardware = { workspace = true }
limo = { workspace = true }

[tool.uv.workspace]
members = ["mpc_landing", "sim", "hardware", "limo"]
