[project]
name = "mpc-hardware"
version = "0.1.0"
description = "Crazyflie hardware control scripts"
requires-python = ">=3.13"
dependencies = [
    "cflib",
    "mpc-landing",
    "paho-mqtt",
    "pynput",
    "pyvista",
    "scipy",
]

[tool.setuptools]
py-modules = ["teleop", "mqtt_viewer", "mpc_teleop"]

[project.scripts]
hw-teleop = "teleop:main"
mqtt-viewer = "mqtt_viewer:main"
mpc-teleop = "mpc_teleop:main"

[tool.uv.sources]
mpc-landing = { workspace = true }
