[project]
name = "mpc-hardware"
version = "0.1.0"
description = "Crazyflie hardware control scripts"
requires-python = ">=3.13"
dependencies = [
    "cflib",
    "mpc-landing",
    "paho-mqtt",
    "pynput",
    "pyvista",
    "scipy",
]

[tool.setuptools]
py-modules = ["teleop", "dashboard", "mpc_pilot", "csv_logger", "battery"]

[project.scripts]
hw-teleop = "teleop:main"
dashboard = "dashboard:main"
mpc-pilot = "mpc_pilot:main"

[tool.uv.sources]
mpc-landing = { workspace = true }
