[project]
name = "sim"
version = "0.1.0"
description = "Crazyflow simulation environment"
requires-python = ">=3.13"
dependencies = [
    "crazyflow",
    "cvxpy",
    "mpc-landing",
    "numpy",
    "pynput>=1.8.1",
    "pyvista",
    "scipy",
]

[tool.setuptools]
py-modules = ["mpc_controller", "mpc_controller_ground", "teleop", "mpc_gui"]

[project.scripts]
sim-mpc = "mpc_controller:main"
sim-mpc-ground = "mpc_controller_ground:main"
sim-mpc-gui = "mpc_gui:main"
sim-teleop = "teleop:main"

[tool.uv.sources]
crazyflow = { git = "https://github.com/utiasDSL/crazyflow.git" }
mpc-landing = { workspace = true }
