[project]
name = "mpc-landing"
version = "0.1.0"
description = "MPC-based autonomous quadrotor landing system"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "cvxpy",
    "scipy",
    "pyserial",
    "paho-mqtt",
    "cflib",
]

[tool.setuptools]
py-modules = ["supervisor", "mpc", "pid", "reference", "boundary", "crsf", "mqtt_sub", "mqtt_parser"]
